# AscendAI

./: .gitignore  API_DOCS.md  LICENSE  README.md  example.env  pyproject.toml
src/ascendai/: __init__.py  api.py  lead_assessor.py  lead_generation.py  llm.py  streamlit_app.py  test.py
src/models/: __init__.py  lead.py  search_query.py
src/utils/: web_search.py
