[project]
name = "ascendai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akshat Singh", email = "akshat.singh@payu.in" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.7",
    "cert-tools>=3.0.2",
    "duckduckgo-search>=8.1.1",
    "googlesearch-python>=1.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "tavily-python>=0.7.14",
    "beautifulsoup4>=4.12.2",
    "html2text>=2025.4.15",
    "requests-html>=0.10.0",
    "lxml-html-clean>=0.4.3",
    "playwright>=1.57.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.30.0",
]

[project.scripts]
ascendai = "ascendai:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
